# IoT_secure_distributed_database

./: .gitignore  CMakeLists.txt  README.md
CS263_project_report/: CS263_project_report.tex  biblio.bib  proposal.tex
CS263_project_report/sections/: Conclusion.tex  Eval.tex  Introduction.tex  Problem.tex  Related_work.tex  Solution.tex
documentation/: April19.md  April26.txt  May10.md
include/: common.h  database.h
libs/base64/: base64.h
resources/: client.py  cpython.profiling.txt  credentials.json  database.json  database.json.default  generate_testcase.py  local_store.json  parse_profiling.py  run_profiling.sh  salts.json  ssl.debug.crt  ssl.debug.csr  ssl.debug.key
resources/profiling_data/: cpp.delete.profile  cpp.read.profile  cpp.syscalls.write.profiling.txt  cpp.write.profile  cpython.delete.profile  cpython.read.profiling.txt  cpython.syscalls.write.profile  cpython.write.profile  pypy.delete.profile  pypy.profiling.txt  pypy.read.profiling.txt  pypy.syscalls.write.profile  pypy.write.profile
src/: client.cpp  database.cpp  server.cpp  server_cloud.cpp
technical report/: biblio.bib  technical_report.tex
technical report/sections/: Conclusion.tex  Introduction.tex  Related_work.tex
test/: delete_testcase.txt  read_testcase.txt  write_testcase.txt
